# siros-wscd-manager

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs
.github/workflows/: ci.yml  release.yml  sonarcloud.yml
src/: callbacks.rs  config.rs  error.rs  ffi.rs  lib.rs  manager.rs  traits.rs  types.rs  wasm_ffi.rs
src/plugins/: mod.rs  preview_sign.rs  r2ps.rs  softkey.rs
tests/: integration.rs  softkey_extended.rs
