[package]
name = "siros-wscd-manager"
version = "0.1.0"
edition = "2021"
license = "BSD-2-Clause"
description = "Pluggable WSCD manager for EUDI wallet key operations"
repository = "https://github.com/sirosfoundation/siros-wscd-manager"

[features]
default = ["plugin-softkey"]
plugin-softkey = ["josekit"]
plugin-r2ps = ["r2ps-client"]
plugin-fido2 = []  # previewSign — depends on upstream Yubico crate

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
zeroize = { version = "1", features = ["derive"] }
p256 = { version = "0.13", features = ["ecdsa"] }
base64ct = { version = "1", features = ["std"] }
rand = "0.8"
log = "0.4"
async-trait = "0.1"
tokio = { version = "1", features = ["sync", "rt"] }

# Optional plugin dependencies
josekit = { version = "0.10", optional = true }
r2ps-client = { path = "../r2ps-client", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
